# yt-dlp-thumbnail-scraper

./: .gitignore  LICENSE  README.md  pyproject.toml
yt_dlp_thumbnail_scraper/: __init__.py  __main__.py  cli.py  scraper.py
